--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ test:
     - python3.6 -m unittest tests.test_my_air_cargo_problems:
 
   post:
-    - python3.6 ./run_search.py -p 1 2 3 -s 6 7 8 9:
+    - python3.6 ./run_search.py -p 1  -s 1 2 3 4 5 6 7 8 9 10:
         timeout: 9000
 
 machine:
